fix text overflow of flex items

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,9 @@
   width: 400px;
   height: 400px;
   margin: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 img {
